Added soundcloud embed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="row">
       <div class="small-8 small-centered columns author">
-        <h5>Claire Fahy</h5>
+        <h5>Written by Claire Fahy</h5>
       </div>
     </div>
 
@@ -82,6 +82,7 @@
           <p>It wasn't until Alford's sophomore year that he began to take control - entering the starting lineup and putting up significant numbers. With Powell being less of a vocal leader than Anderson had been on the court, Alford assumed the role of floor general.</p>
           <p>With the 2015 season in doubt heading into February, Powell called out his team for not giving as much as he and Alford did.</p>
           <p>"You gotta show some energy, some heart, some toughness, get in their face, pressure them, whatever it takes," Powell said after the Bruins returned from an Oregon road trip with two losses. "It's just hitting the switch to get everybody on the same page and fighting just as hard as me and Bryce - the leaders - are."</p>
+          <iframe width="100%" height="300" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/247647280&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
           <p>It wasn't just his teammates' attention that Alford had caught. By the time the Bruins entered the NCAA Tournament, even the New York Times had picked up on his story. The scrutiny wasn't all that new for the sophomore - from the moment he arrived in Westwood, his name had made headlines for all kinds of reasons.</p>
           <p>"I try to ignore as much of (the media attention) as I can because I've seen both sides of it," Alford said. "It's very drastic - either I'm getting as much hate as possible or I'm getting praise like, "This dude's the next whatever." So there's really never a middle ground where I can just be playing basketball and nobody notices or nobody says anything."</p>
           <p>The exclamation point to Alford's breakout season was undoubtedly the Southern Methodist game on March 19, 2015. UCLA snuck into the tournament amidst cries of prestige bias, but hung on until the second round where pundits everywhere predicted the Bruins would be knocked out. An 11th-seed taking on 6th-seeded SMU, it looked like UCLA's roller coaster season was nearing the end of its ride.</p>
@@ -116,9 +117,9 @@
           <p>On Jan. 7, people questioned if Alford was truly the real deal after he shot 23 percent on the Bruins' conference-opening Washington road trip. Alford answered with 25 points against then-No. 7 Arizona, punctuated with a made 3-pointer as time expired to secure the upset.</p>
           <p>"I haven't said it publicly probably enough, I probably shy away from that, but he's in his junior year now and he's one of our players," Steve Alford said, following the win over Arizona. "He's proven himself. He's a tough kid, he's a really tough kid."</p>
           <p>The biggest wins of the season, however - UCLA's upsets over Kentucky and Gonzaga - were ones in which Alford took more of a backseat, scoring 15 and 13 points respectively.</p>
-          <p>"The individual moments are stuff I'll remember forever, but just the stuff that we accomplished as a team, (such as) going to back-to-back Sweet 16s … (and) then last year to have my individual impact on us get us into the Sweet 16, it's something that I'm always going to remember," Alford said.</p>
+          <p>"The individual moments are stuff I'll remember forever, but just the stuff that we accomplished as a team, (such as) going to back-to-back Sweet 16s ... (and) then last year to have my individual impact on us get us into the Sweet 16, it's something that I'm always going to remember," Alford said.</p>
           <p>His team-centric mentality is one that has evolved over the course of the past three seasons. Instead of fighting for minutes or looking to score, Alford now has greater responsibilities that take place off the court.</p>
-          <p>"There's a lot that goes into (being a leader) that's really behind-the-scenes - from sending text messages to the team after a loss … or just bringing individuals aside after a game," Alford said. "From our walk-ons that hardly even have to do anything in practice … all the way up to our starters. Everybody has to be at their best for us to be as good as we can be."</p>
+          <p>"There's a lot that goes into (being a leader) that's really behind-the-scenes - from sending text messages to the team after a loss ... or just bringing individuals aside after a game," Alford said. "From our walk-ons that hardly even have to do anything in practice ... all the way up to our starters. Everybody has to be at their best for us to be as good as we can be."</p>
         </div>
     </div>
 
