--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body onLoad="checkStart('vid1'); checkStart('vid2'); checkStart('vid3');">
     <img class="header" src="header.jpg" alt="Illustration #1">
 
     <div class="row">
@@ -35,8 +35,10 @@
     </div>
     
     <div class="row">
-        <div class="small-8 small-centered columns illo">
-          <img src="illo2.jpg" alt="Illustration #2">
+        <div class="small-8 small-centered columns">
+            <video id="vid1" controls>
+                <source src="vid1.mp4" type="video/mp4">
+            </video>
         </div>
     </div>
 
@@ -64,8 +66,10 @@
     </div>
 
     <div class="row">
-        <div class="small-8 small-centered columns illo">
-          <img src="illo3.jpg" alt="Illustration #3">
+        <div class="small-8 small-centered columns">
+            <video id="vid2" controls>
+              <source src="vid2.mp4" type="video/mp4">
+            </video>
         </div>
     </div>
 
@@ -99,7 +103,9 @@
 
     <div class="row">
         <div class="small-8 small-centered columns illo">
-          <img src="illo4.jpg" alt="Illustration #4">
+          <video id="vid3" controls>
+            <source src="vid3.mp4" type="video/mp4">
+          </video>
         </div>
     </div>
 
