--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Daily Bruin Sports | The Shot Caller</title>
     <link rel="stylesheet" href="foundation-6/css/foundation.css" />
     <link rel="stylesheet" href="foundation-6/css/app.css" />
     <link rel="stylesheet" href="style.css">
